# fru-arrow

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: cargo-audit.yml  pip-audit.yml  pyfru-docs.yml  python-ci.yml  rust-ci.yml
fru/: Cargo.toml
fru/src/: attribute.rs  classification.rs  lib.rs  regression.rs  serialize.rs  tools.rs
fru/src/classification/: da.rs  impurity.rs  votes.rs
fru/src/regression/: da.rs  impurity.rs  votes.rs
fru/tests/: random_forest.rs
pyfru/: Cargo.toml  pyproject.toml
pyfru/python/docs/: Makefile  api.rst  conf.py  getting_started.rst  index.rst
pyfru/python/pyfru/: __init__.py  data_structures.py  random_forest.py
pyfru/python/tests/: test_pyfru.py
pyfru/src/: lib.rs
src/: attribute.rs  classification.rs  lib.rs  regression.rs
src/classification/: da.rs  impurity.rs  votes.rs
src/regression/: impurity.rs  votes.rs
tests/: random_forest.rs
