[package]
name = "minrf"
version = "0.1.0"
authors = ["Miron B. Kursa <m@mbq.me>"]
edition="2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrf = "0.1.0"
pyo3 = { version = "0.27", features = ["extension-module"] }
minarrow = {version="0.6.0", features=["extended_numeric_types", "extended_categorical"]}
# numpy = "0.27"
