[package]
name = "fru"
version = "0.1.0"
authors = ["Krzysztof Piwonski <fruarrow@kpiwonski.com>", "Miron B. Kursa <m@mbq.me>"]
edition="2024"
license = "GPL-3.0-or-later"
description = "Blazingly fast implementation of Random Forest with apache arrow support"
readme = "../README.md"
keywords = ["machine-learning", "ml", "random-forest", "decision-tree"]
categories = ["artificial-intelligence"]

[dependencies]
xrf = {version="0.1.7"}
minarrow = {version="0.10.1", features=["extended_numeric_types", "extended_categorical"]}
serde = "1.0.228"
postcard = {version = "1.1.3", features = ["use-std"]}
thiserror = "2.0.18"

[dev-dependencies]
rand = "0.9"
minarrow = {version="0.10.1", features=["extended_numeric_types", "extended_categorical", "views"]}

[profile.release]
codegen-units = 1
lto = "fat"
