[project]
name = "pyfru"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pandas>=3"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "pyfru._rust"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
]
